--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@
 body {
   font-family: helvetica, arial, sans-serif;
   margin: 2em;
+  background: black;
 }
 
 h1 {
-  font-style: italic;
-  color: #373fff;
+  color: pink;
 }
