--- a/style.css
+++ b/style.css
@@ -1,10 +1,21 @@
 /* CSS files add styling rules to your content */
-
-body {
-  font-family: helvetica, arial, sans-serif;
-  margin: 2em;
-}
-
 h1 {
   color: pink;
+}
+
+html, body {
+  font-family: helvetica, arial, sans-serif;
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+
+  /* This centers our sketch horizontally. */
+  justify-content: center;
+
+  /* This centers our sketch vertically. */
+  align-items: center;
 }
